[project]
name = "supermem"
version = "0.1.0"
description = "supermem a bot"
authors = [
    {name = "rahulgzb",email = "rahulmehta.gzb@email.com"}
]
readme = "README.md"
requires-python = "3.11.13"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "python-telegram-bot (>=22.5,<23.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "black (>=25.12.0,<26.0.0)"
]
